--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "prismjs": "^1.15.0",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
+    "react-icons": "^3.0.5",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5",
     "reactstrap": "^6.3.0"
