--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.1.3",
+    "firebase": "^5.4.2",
     "node-sass-chokidar": "^1.3.3",
     "npm-run-all": "^4.1.3",
     "prismjs": "^1.15.0",
