--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.1.3",
+    "brace": "^0.11.1",
     "firebase": "^5.4.2",
     "node-sass-chokidar": "^1.3.3",
     "npm-run-all": "^4.1.3",
-    "prismjs": "^1.15.0",
     "react": "^16.4.2",
+    "react-ace": "^6.2.0",
     "react-dom": "^16.4.2",
     "react-icons": "^3.0.5",
     "react-router-dom": "^4.3.1",
